--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "The Club",
-  "name": "No safari havers allowed",
+  "name": "",
   "icons": [
     {
       "src": "favicon.ico",
