--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -1,6 +1,6 @@
-FROM golang:1.14-alpine
+FROM golang:1.14-alpine as build
 
-RUN apk add --update make git
+RUN apk add --update make git build-base
 RUN apk --no-cache add ca-certificates
 
 COPY . /club/
@@ -11,7 +11,7 @@ RUN make build
 FROM alpine:latest
 RUN apk --no-cache add ca-certificates
 WORKDIR /app/
-COPY --from=0 /club/club .
-COPY --from=0 /club/static static
+COPY --from=build /club/club .
+COPY --from=build /club/static static
 
 CMD ["./club"]
