--- a/golang/Makefile
+++ b/golang/Makefile
@@ -4,6 +4,7 @@ all: build coverage
 
 install:
 	curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v1.27.0
+	cd static/ && yarn install
 
 build:
 	go build ./cmd/club
@@ -25,6 +26,7 @@ coverage-ci:
 
 lint:
 	./bin/golangci-lint run
+	cd static/ && npm run lint
 
 ci: install lint build test coverage-ci
 
