ESLint and CI setup for Static (#33)
* Updated golang make link to install static js packages
* init package.json with lint and format commands
* Updated golang make lint to lint static assets
* Updated travis to add node to golang env, using node 12.

--- a/golang/Makefile
+++ b/golang/Makefile
@@ -4,6 +4,7 @@ all: build coverage
 
 install:
 	curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v1.27.0
+	cd static/ && yarn install
 
 build:
 	go build ./cmd/club
