--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ matrix:
         - 1.14.x
       before_install:
         - cd golang/
+      install:
+        - . $HOME/.nvm/nvm.sh
+        - nvm install 12
+        - nvm use 12
       script:
         - make ci
 
