--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -1,7 +1,8 @@
-.PHONY: install build all run ci
+.PHONY: install build lint format test ci run run-debug all
 
 install:
 	yarn install
+	yarn global add react-scripts
 
 build:
 	npm run build
@@ -11,6 +12,9 @@ lint:
 
 format:
 	npm run format
+
+test:
+	npm run test
 
 ci:
 	npm run ci
