--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -3,16 +3,14 @@ FROM golang:1.14-alpine as build
 RUN apk add --update make git build-base
 RUN apk --no-cache add ca-certificates
 
-COPY . /club/
-WORKDIR /club/
+COPY . /golang/
+WORKDIR /golang/
 
 RUN make build
 
 FROM alpine:latest
 RUN apk --no-cache add ca-certificates
 WORKDIR /app/
-COPY --from=build /club/club .
-COPY --from=build /club/club.yaml .
-COPY --from=build /club/static static
-
-CMD ["./club"]
+COPY --from=build /golang/backend .
+COPY --from=build /golang/backend.yaml .
+COPY --from=build /golang/static static
