--- a/k8s/club/service.yaml
+++ b/k8s/club/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: club-${ENV}-service
+  name: club-backend-${ENV}-service
 spec:
   selector:
-    app: club
+    app: club-backend
     env: ${ENV}
   type: ClusterIP
   ports:
