Undid rename of dir

--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -3,14 +3,14 @@ FROM golang:1.14-alpine as build
 RUN apk add --update make git build-base
 RUN apk --no-cache add ca-certificates
 
-COPY . /golang/
-WORKDIR /golang/
+COPY . /club/
+WORKDIR /club/
 
 RUN make build
 
 FROM alpine:latest
 RUN apk --no-cache add ca-certificates
 WORKDIR /app/
-COPY --from=build /golang/backend .
-COPY --from=build /golang/backend.yaml .
-COPY --from=build /golang/static static
+COPY --from=build /club/backend .
+COPY --from=build /club/backend.yaml .
+COPY --from=build /club/static static
