Adjusted travis yaml to account for frontend ci running change

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
       before_install:
         - cd frontend/
       script:
-        - npm run ci
+        - make ci
 
 notifications:
   email: false
