- Adds 'make run-pretty' option to format log output in a more human-readable way. - Fixes typos in a couple places - Adds static/examples/mirror.html, which synthesizes a video source and acts as a peer. - Adds links to other examples to bottom of static/index.html - Adds js/mirrormedia.js which uses a Canvas to create a peer video stream. - In peering.js, add a 1-second delay before manually firing .play() on a newly created video element. This resolves random issues where even an autoplay video element doesn't start playing automatically.

--- a/golang/Makefile
+++ b/golang/Makefile
@@ -35,3 +35,9 @@ run: build
 
 run-debug: build
 	ENV=local ./backend
+
+run-pretty: build
+	# open http://localhost:3001
+	ENV=local ./backend 2>&1 | jq --raw-output '[("# " + .level + (" " * 10))[0:10], (.func + (" " * 20))[0:20], .msg] | @tsv'
+
+
