--- a/frontend/k8s/ingress.yaml
+++ b/frontend/k8s/ingress.yaml
@@ -1,21 +1,21 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: pedantic-orderliness-test-ingress
+  name: club-frontend-prod-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-prod-registry
 spec:
   rules:
-  - host: test.pedanticorderliness.com
+  - host: club.pedanticorderliness.com
     http:
       paths:
       - backend:
-          serviceName: pedantic-orderliness-test-service
+          serviceName: club-frontend-prod-service
           servicePort: 80
         path: /
         pathType: ImplementationSpecific
   tls:
   - hosts:
-    - test.pedanticorderliness.com
-    secretName: pedantic-orderliness-test
+    - club.pedanticorderliness.com
+    secretName: club-frontend-prod
