--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -7,21 +7,25 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
+    - name: Use Node.js 10.x
+      uses: actions/setup-node@v1
       with:
-        go-version: ^1.14
+        node-version: '12'
       id: go
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
     - name: Get deps
       run: make install
+      working-directory: frontend
     - name: Lint
       run: make lint
+      working-directory: frontend
     - name: Build
       run: make build
+      working-directory: frontend
     - name: Test
       run: make test
+      working-directory: frontend
     - name: Build and push Docker images
       uses: docker/build-push-action@v1.1.0
       with:
@@ -30,6 +34,7 @@ jobs:
         password: ${{ secrets.DOCKER_REG_PASS }}
         repository: club-frontend
         tags: ${{ github.sha }},latest
+      working-directory: frontend
     - name: Deploy
       run: |
         curl --fail -X PUT -H "X-Access-Token: ${{ secrets.ACTIONS_ACCESS_TOKEN }}" "https://actions.pedanticorderliness.com/deploy?repo=$GITHUB_REPOSITORY/frontend&tag=$GITHUB_SHA"
