--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -16,12 +16,16 @@ jobs:
       uses: actions/checkout@v2
     - name: Get deps
       run: make install
+      working-directory: golang
     - name: Lint
       run: make lint
+      working-directory: golang
     - name: Build
       run: make build
+      working-directory: golang
     - name: Test
       run: make test
+      working-directory: golang
     - name: Build and push Docker images
       uses: docker/build-push-action@v1.1.0
       with:
@@ -30,6 +34,7 @@ jobs:
         password: ${{ secrets.DOCKER_REG_PASS }}
         repository: club-backend
         tags: ${{ github.sha }},latest
+      working-directory: golang
     - name: Deploy
       run: |
         curl --fail -X PUT -H "X-Access-Token: ${{ secrets.ACTIONS_ACCESS_TOKEN }}" "https://actions.pedanticorderliness.com/deploy?repo=$GITHUB_REPOSITORY/backend&tag=$GITHUB_SHA"
