--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -34,7 +34,7 @@ jobs:
         password: ${{ secrets.DOCKER_REG_PASS }}
         repository: club-backend
         tags: ${{ github.sha }},latest
-      working-directory: golang
+        dockerfile: golang/Dockerfile
     - name: Deploy
       run: |
         curl --fail -X PUT -H "X-Access-Token: ${{ secrets.ACTIONS_ACCESS_TOKEN }}" "https://actions.pedanticorderliness.com/deploy?repo=$GITHUB_REPOSITORY/backend&tag=$GITHUB_SHA"
