--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -34,7 +34,7 @@ jobs:
         password: ${{ secrets.DOCKER_REG_PASS }}
         repository: club-frontend
         tags: ${{ github.sha }},latest
-      working-directory: frontend
+        dockerfile: frontend/Dockerfile
     - name: Deploy
       run: |
         curl --fail -X PUT -H "X-Access-Token: ${{ secrets.ACTIONS_ACCESS_TOKEN }}" "https://actions.pedanticorderliness.com/deploy?repo=$GITHUB_REPOSITORY/frontend&tag=$GITHUB_SHA"
