--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -7,12 +7,12 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-    - name: Use Node.js 10.x
+    - name: Use Node.js 12.x
       uses: actions/setup-node@v1
       with:
         node-version: '12'
       id: go
-    - name: Check out code into the Go module directory
+    - name: Check out code
       uses: actions/checkout@v2
     - name: Get deps
       run: make install
@@ -34,7 +34,7 @@ jobs:
         password: ${{ secrets.DOCKER_REG_PASS }}
         repository: club-frontend
         tags: ${{ github.sha }},latest
-        dockerfile: frontend/Dockerfile
+        path: frontend
     - name: Deploy
       run: |
         curl --fail -X PUT -H "X-Access-Token: ${{ secrets.ACTIONS_ACCESS_TOKEN }}" "https://actions.pedanticorderliness.com/deploy?repo=$GITHUB_REPOSITORY/frontend&tag=$GITHUB_SHA"
